<resources>
    <string name="app_name">Kineticgear2</string>
    <string name="kineticgear">KineticGear</string>
    <string name="kineticgear_login">KineticGear Login</string>
    <string name="app_logo">App Logo</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user_create_account">New User? Create Account</string>
</resources>