<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingHorizontal="32dp"
    android:paddingVertical="24dp"
    android:background="@color/app_background">

    <!-- YOUR LOGO HERE -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="147dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/app_logo" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="Since 1980"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="0dp"

        android:gravity="center"
        android:text="KINETIC GEARS"
        android:textColor="@color/red_primary"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="12dp"
        android:minHeight="52dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@android:drawable/edit_text"
            android:autofillHints="password"
            android:minHeight="48dp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/login"
        android:backgroundTint="#6200EE"/>

    <TextView
        android:id="@+id/tvGoToSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user_create_account"
        android:textColor="#6200EE"
        android:padding="10dp"
        android:layout_marginTop="16dp"/>

</LinearLayout>